--- a/main.ipynb
+++ b/main.ipynb
@@ -15,15 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q boto3 pandas opensearch-py requests_aws4auth python-dotenv"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4c685d74",
-   "metadata": {},
-   "source": [
-    ".envファイルにクレデンシャル情報を書き込む"
+    "!pip install -q boto3 pandas opensearch-py requests_aws4auth"
    ]
   },
   {
@@ -33,25 +25,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "# .envファイルから環境変数を読み込む\n",
-    "load_dotenv(override=True)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "83d72b61",
-   "metadata": {},
-   "source": [
-    "## OpenSearch インデックスの作成"
+    "import os.path\n",
+    "currentDirectory = os.path.abspath('')\n",
+    "print(currentDirectory)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "648446e5-37bd-4d6c-9cb9-929a430656ff",
+   "id": "e230664e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,32 +41,96 @@
     "import json\n",
     "import base64\n",
     "import pandas as pd\n",
-    "from opensearchpy import OpenSearch, RequestsHttpConnection\n",
+    "from opensearchpy import OpenSearch, RequestsHttpConnection, OpenSearchException\n",
     "from requests_aws4auth import AWS4Auth\n",
     "from IPython.display import Image, display\n",
-    "import os\n",
-    "\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2791ef9",
+   "metadata": {},
+   "source": [
+    "## Bedrock クライアントの初期化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67de3115-62c9-41d5-8ea6-c27a1e232e05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env AWS_ACCESS_KEY_ID=\n",
+    "%env AWS_SECRET_ACCESS_KEY=\n",
+    "%env REGION=us-east-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c68cd6a6-9b55-408e-bd53-177c7a79fc84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getHost():\n",
+    "    \"\"\"Waits for the collection to become active\"\"\"\n",
+    "    response = boto3.client(\n",
+    "        service_name='opensearchserverless',\n",
+    "        region_name=os.environ.get(\"REGION\"),\n",
+    "        aws_access_key_id=AWS_ACCESS_KEY_ID,\n",
+    "        aws_secret_access_key=AWS_SECRET_ACCESS_KEY\n",
+    "        ).batch_get_collection(\n",
+    "        names=['test-collection'])\n",
+    "    final_host = (response['collectionDetails'][0]['collectionEndpoint'])\n",
+    "    print(\"Host:\"+ final_host)\n",
+    "    return final_host\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d88ddbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "AWS_ACCESS_KEY_ID=os.environ.get(\"AWS_ACCESS_KEY_ID\")\n",
     "AWS_SECRET_ACCESS_KEY=os.environ.get(\"AWS_SECRET_ACCESS_KEY\")\n",
+    "OPENSEAECH_HOST=getHost()\n",
+    "REGION=os.environ.get(\"REGION\")\n",
     "\n",
     "# Bedrock\n",
     "bedrock_runtime = boto3.client(\n",
     "        service_name=\"bedrock-runtime\",\n",
-    "        region_name=\"us-east-1\",\n",
+    "        region_name=REGION,\n",
     "        aws_access_key_id=AWS_ACCESS_KEY_ID,\n",
     "        aws_secret_access_key=AWS_SECRET_ACCESS_KEY\n",
-    "    )\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c873b67",
+   "metadata": {},
+   "source": [
+    "## OpenSearch クライアントの初期化（Amazon OpenSearch Service版）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "776273a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "# OpenSearch\n",
+    "\n",
+    "# Amazon OpenSearch Service\n",
     "service = \"aoss\"  # must set the service as 'aoss'\n",
     "region = \"us-east-1\"\n",
     "dimensions = 1024\n",
     "index_name = \"test-index\"\n",
-    "\n",
-    "credentials = boto3.Session(\n",
-    "    aws_access_key_id=AWS_ACCESS_KEY_ID,\n",
-    "    aws_secret_access_key=AWS_SECRET_ACCESS_KEY).get_credentials()\n",
-    "\n",
     "\n",
     "awsauth = AWS4Auth(\n",
     "    AWS_ACCESS_KEY_ID,\n",
@@ -95,7 +141,7 @@
     "\n",
     "# OpenSearchのクライアント定義\n",
     "client = OpenSearch(\n",
-    "    hosts = \"https://kgveni0x6hgcq1h8lnjh.us-east-1.aoss.amazonaws.com\",\n",
+    "    hosts = OPENSEAECH_HOST,\n",
     "    http_auth = awsauth,\n",
     "    use_ssl = True,\n",
     "    verify_certs = True,\n",
@@ -103,7 +149,51 @@
     "    engine = \"faiss\",\n",
     "    timeout = 300,\n",
     ")\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e5b3aaa",
+   "metadata": {},
+   "source": [
+    "## OpenSearch クライアントの初期化（LocalHost版）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9929ef08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# host = 'opensearch'\n",
+    "# port = 9200\n",
+    "# auth = (\"admin\", \"nfa8a4eNfJdsoaf%\")\n",
+    "# client = OpenSearch(\n",
+    "#     hosts = [{'host': host, 'port': port}],\n",
+    "#     http_compress=True,\n",
+    "#     http_auth=auth,\n",
+    "#     use_ssl=True,\n",
+    "#     verify_certs=False,\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94d450ab",
+   "metadata": {},
+   "source": [
+    "## OpenSearch インデックスの作成"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4f7baad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if not client.indices.exists(index_name):\n",
     "    # OpenSearchのインデックス作成\n",
     "    client.indices.create(index_name,\n",
@@ -146,7 +236,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "df = pd.read_csv(\"./img/shoes/data.csv\")\n",
+    "df = pd.read_csv(currentDirectory+\"/img/shoes/data.csv\")\n",
     "\n",
     "for _, row in df.iterrows():\n",
     "    title = row[\"title\"]\n",
@@ -173,7 +263,8 @@
     "    vectors = {\"values\": vector_body, \"title\": title, \"imagePath\": image_path}\n",
     "    \n",
     "    # OpneSearchにドキュメントを登録\n",
-    "    response = client.index(index=index_name, body=vectors)"
+    "    response = client.index(index=index_name, body=vectors)\n",
+    "sleep(5)"
    ]
   },
   {
@@ -273,7 +364,7 @@
    "outputs": [],
    "source": [
     "# クエリとなる画像\n",
-    "Image(\"./img/shoes/query/white-sneakers.png\")"
+    "Image(currentDirectory+\"/img/shoes/query/white-sneakers.png\")"
    ]
   },
   {
@@ -283,8 +374,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# 靴の画像を読み込んで、inputImageをキーとしたシリアライズ\n",
-    "with open(\"./img/shoes/query/white-sneakers.png\", \"rb\") as image_file:\n",
+    "with open(currentDirectory+\"/img/shoes/query/white-sneakers.png\", \"rb\") as image_file:\n",
     "  input_image = base64.b64encode(image_file.read()).decode(\"utf8\")\n",
     "body = json.dumps({\"inputImage\": input_image})\n",
     "vectorQuery(body)\n"
@@ -306,19 +398,11 @@
    "outputs": [],
    "source": [
     "# 靴の画像を読み込んで、inputImageをキーとしたシリアライズ\n",
-    "with open(\"./img/shoes/query/white-sneakers.png\", \"rb\") as image_file:\n",
+    "with open(currentDirectory+\"/img/shoes/query/white-sneakers.png\", \"rb\") as image_file:\n",
     "  input_image = base64.b64encode(image_file.read()).decode(\"utf8\")\n",
     "body = json.dumps({\"inputImage\": input_image,\"inputText\": \"これの赤いやつ\"} )\n",
     "vectorQuery(body)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "614d9c21",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -337,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
